--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3));
+    background-image: linear-gradient(rgba(56,149,112,0.5),rgba(56,149,112,0.5));
     position: relative;
     padding: 0 5%;
     display: flex;
@@ -137,4 +137,9 @@ body{
         width: auto;
         height: 100%;
     }
+}
+
+.pageheader{
+    align-items: center;
+    
 }
