--- a/style.css
+++ b/style.css
@@ -64,15 +64,21 @@ body{
     color: #fff;
     text-decoration: none;
     font-weight: 700;
+    transition: 0.4s;
+}
+
+.logo:hover{
+    -webkit-text-stroke: 0.1px #e4e4e4;
+    color: transparent;
 }
 
 .navbar a{
     position: relative;
-    font-size: 18px;
+    font-size: 16px;
     color: #fff;
     font-weight: 500;
     text-decoration: none;
-    margin-left: 40px;
+    margin-left: 36px;
 }
 
 .navbar a::before{
@@ -98,7 +104,7 @@ body{
     font-size: 160px;
     color: #fff;
     font-weight: 600;
-    transition: 0.2s;
+    transition: 0.4s;
 }
 
 .content h1:hover{
@@ -123,6 +129,7 @@ body{
     right: 0;
     bottom: 0;
     z-index: -1;
+    display: flex;
 }
 
 @media (min-aspect-ratio: 16/9){
