--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(56,149,112,0.5),rgba(56,149,112,0.5));
+    background-image: linear-gradient(rgb(34, 34, 34),rgb(46, 46, 46));
     position: relative;
     padding: 0 5%;
     display: flex;
@@ -116,6 +116,10 @@ body{
     color: #fff;
     font-weight: 500;
     margin-bottom: 20px;
+}
+
+.about{
+    color: #fff;
 }
 
 .content h1:hover{
